fix: revert Collections.emptyList to original API
Motivation:
Review feedback: prefer Collections.emptyList() over List.of() for empty
collections since it uses a well-known immutable singleton API.

Modification:
Revert empty list conversions while keeping non-empty Arrays.asList ->
List.of conversions.

Result:
Empty collections use the established Collections.emptyList() API.